--- a/pages/RekomendasiKado.html
+++ b/pages/RekomendasiKado.html
@@ -8,14 +8,14 @@
     Menjelang Hari Natal, biasanya tukar kado menjadi tradisi yang tidak boleh dilewatkan.
     Selain sebagai ajang untuk berkumpul bersama keluarga dan mempererat keakraban, tukar kado
     juga sebagai bukti bahwa kita mengasihi orang tersebut.
-    <br>
+    <br><br>
     Untuk beberapa orang, mungkin akan kesulitan untuk menemukan kado Natal yang cocok dengan
     harga yang terjangkau.
-    <br>
+    <br><br>
     Namun kamu tidak perlu khawatir, beberapa kado ini bisa kamu berikan untuk orang tercinta.
     Selain harganya yang murah, beberapa kado ini juga dijamin akan membuat kenangan yang
     menyenangkan bagi individu yang menerima kado darimu.
-    <br>
+    <br><br>
     Berikut deretan kado yang cocok untuk kamu berikan pada orang cinta menjelang Hari Natal:
   </p>
 
@@ -35,14 +35,13 @@
         <p class="flow-text left-align">
           Kado pertama yang bisa kamu berikan pada orang tercinta yakni atribut Natal, seperti topi sinterklas,
           gantungan pintu berbentuk lonceng, atau lampu warna-warni yang menjadi penghias pohon Natal.
-          <br>
+          <br><br>
           Selain harga yang murah, atribut Natal juga bisa memberikan kenangan tersendiri bagi seseorang
           yang menerima kado darimu.
-          <br>
+          <br><br>
           Ingat ya, yang terpenting bukanlah harga dari kado tersebut, tapi, bagaimana kamu dapat memberikan yang
           terbaik bagi seseorang yang kamu cintai menjelang Hari Natal. Suatu harga bukanlah menjadi tolak ukur
-          untuk
-          kado dapat dikatakan bagus dan memiliki makna.
+          untuk kado dapat dikatakan bagus dan memiliki makna.
         </p>
       </div>
     </div>
@@ -65,7 +64,7 @@
           Hal mudah yang dapat kamu berikan menjelang Hari Natal adalah mug. Kamu dapat memberikan mug untuk orang yang
           kamu sayangi. Selain harganya yang terjangkau, mug juga sangat berguna dan akan selalu digunakan apabila
           didapat dari seseorang yang dicintai.
-          <br>
+          <br><br>
           Kamu juga bisa mencari mug dengan gambar variasi yang berbeda. Toko-toko yang menjual mug juga akan
           menyediakan variasi yang unik sehingga akan membuat kado Natalmu lebih spesial.
         </p>
@@ -89,7 +88,7 @@
         <p class="flow-text left-align">
           Biasanya menjelang Hari Natal, cuaca berubah menjadi sangat dingin. Nah, kamu bisa memberikan sweater bagi
           seseorang yang spesial buatmu.
-          <br>
+          <br><br>
           Jangan salah, sweater ini tidak akan menguras isi dompetmu kok. Selain harganya yang cukup terjangkau, sweater
           juga sangat mudah untuk didapatkan.
         </p>
@@ -113,9 +112,9 @@
         <p class="flow-text left-align">
           Kado dalam urutan keempat ini bisa kamu dapatkan dengan mudah, kamu dapat membeli lukisan ataupun bingkai foto
           yang sudah berisi foto dengan seseorang yang kamu cintai.
-          <br>
+          <br><br>
           Untuk harga, tidak perlu khawatir. Hiasan di dinding ini tidak akan membuatmu mengeluarkan banyak uang.
-          <br>
+          <br><br>
           Bagaimana, apa kamu tertarik untuk membelinya? Selain memiliki harga yang cukup terjangkau, hiasan di dinding
           juga bisa memberikan kesan yang hangat dan mudah diingat.
         </p>
@@ -139,7 +138,7 @@
         <p class="flow-text left-align">
           Nah, selanjutnya kamu bisa mencari scrapbook dan diisi berbagai foto kenanganmu bersama seseorang yang kamu
           sayangi.
-          <br>
+          <br><br>
           Harganya sudah pasti sangat pas di kantong, bahkan scrapbook berisi foto-foto ini nantinya akan menjadi kado
           yang romantis yang bisa kamu berikan sebagai hadiah di Hari Natal.
         </p>
@@ -164,7 +163,7 @@
         <p class="flow-text left-align">
           Untuk kado yang satu ini, kamu akan dengan mudah mendapatkannya. Kamu juga bisa membeli berbagai sarung bantal
           dengan gambar yang cocok untuk kamu berikan pada seseorang yang kamu sayangi.
-          <br>
+          <br><br>
           Untuk ukuran bantalnya pun beragam, kamu tinggal menyesuaikannya saja dengan yang kamu butuhkan saat ingin
           membeli sarung bantal tersebut.
         </p>
@@ -188,7 +187,7 @@
         <p class="flow-text left-align">
           Kado yang terakhir ini bisa kamu berikan, seperti gelang, cincin, jam tangan ataupun kalung. Tidak melulu
           harus emas atau pun perak, yang terpenting adalah makna dari kado yang kamu berikan.
-          <br>
+          <br><br>
           Kamu juga bisa memberikan gelang kulit bertuliskan namamu dan nama pasanganmu, atau kamu juga dapat memberikan
           sebuah jam tangan untuk kekasihmu.
         </p>
