--- a/pages/RekomendasiWisata.html
+++ b/pages/RekomendasiWisata.html
@@ -4,7 +4,7 @@
     src="https://cdn.images.express.co.uk/img/dynamic/25/590x/Christmas-flights-save-money-on-travel-1210089.jpg?r=1574954041780">
   <p class="flow-text left-align">
     Sebentar lagi kita akan merayakan Natal yang sudah ditungu-tunggu oleh umat nasrani di seluruh dunia.
-    <br>
+    <br><br>
     Pastinya kamu akan menyiapkan beberapa acara untuk menyambut natal entah makan bersama keluarga, dan liburan bersama
     keluarga juga seru. Nah guys kalian lagi kebingungan mau cari destinasi di Indonesia untuk merayakan natal tahun ini
     dimana? Yuk langsung aja baca artikel saya dibawah sini.
@@ -26,7 +26,7 @@
         <p class="flow-text left-align">
           Kalo kamu mutusin untuk merayakan Natal di Ambon siap-siap kalian akan melihat pesta kembang api yang selalu
           ramai dan perayaan kali ini biasanya dijadikan perayaan pergantian tahun juga loh.
-          <br>
+          <br><br>
           Tau gak sih guys perayaan kembang api di Ambon ini sangat meriah dan menjadi perayaan paling meriah di seluruh
           dunia. Kebayang gak gimana serunya merayaakan Natal di Ambon?
         </p>
@@ -50,7 +50,7 @@
           Natal di Manado memang tidak kalah dari Ambon karena natal di Manadon biasanya masyarakat setempat akan
           mgeadakan acara lebih awal yaitu saat awal bulan Desember guys. Biasanya di Manado banyak sekali masyarakat
           yang menggunakan baju-baju santa claus dan menghias diri dengan baju-baju khas dengan natal.
-          <br>
+          <br><br>
           Di Manado ini memang sangat istimewa karena pemerintah biasanya mengadakan Cristmas Festifal yang biasanya di
           penuhi dengan malaikat, parade kendaraan hias, dan pastinya santa claus yang biasanya akan mengelilingin
           festival itu guys. Pstikan kamu menghadiri Festival ini ya.
@@ -77,7 +77,7 @@
           Dusun Ganjuran, Bambanglipuro, Bantul. Gereja ini biasanya mengadakan misa Natal dengan nuansa jawa yang
           sangat menarik dan pastinya sangat kental dengan nuansa Jawa. biasanya lagu pembuka akan di iringi dengan
           gamelan serta tembang yang menggunakan bahasa Jawa.
-          <br>
+          <br><br>
           Biasanya setelah misa natal selesai umat gereja ini akan berziarah di halaman Candi Mandala Hati Kudus
           Ganjuran, Candi ini terdapat patung Yesus dan biasanya penziarah akan mengambil air suci yang ada di mata air
           Perwitasari. Mau misa dengan nuansa yang berbeda dan berziarah ke candi, maka perayaan natal di Yogyakarta
@@ -120,7 +120,7 @@
         <p>Sumber foto: sofyanard.com</p>
       </div>
       <div class="card-reveal #ef5350 red lighten-1">
-        <span class="card-title grey-text text-darken-4">Scrapbook<i class="material-icons right">close</i></span>
+        <span class="card-title grey-text text-darken-4">Ruteng<i class="material-icons right">close</i></span>
         <p class="flow-text left-align">
           Kota ini memiliki julukan ‘Kota Seribu Gereja’ , dan pastinya saat perayaan Natal sangat seru dan meriah.
           Biasanya selurut umat Katolik di Seluruh Paroki yang ada di Ruteng akan meriahkan perayaan natal dengan
@@ -214,7 +214,7 @@
           mengunjungi gereja-gereja terdekar dan selanjutnya akan melakukan tradisi rabo-rabo. Rabo-rabo sendiri
           merupakan tradisi bangsa Portugal, dan tau gak si kamu di daerah Cilincing banyak sekali warga keturunan
           Portugal.
-          <br>
+          <br><br>
           Saat perayaan Tradisi Rabo-rabo mereka akan menari bersama dan mencoret-coret wajah ssatu sama lain dengan
           bedak yang berwarna-warni. Mencoretkan bedak di wajah ini adalah satu simbol yang dipercaya sebagai penebusan
           dosa dan biasanya mereka akan saling bermaaf-maafan satu sama lain. kamu tertarik mengikuti acara ini? maka
@@ -240,7 +240,7 @@
           Pada bulan Desember perayaan Natal biasanya di Flores sangat unik. Karena biasanya Warga akan membuat Meriam
           bambu yang di beri abu dapur dan minyak tanah lalu di beri api, maka bambu ini akan mengeluarkan bunyi yang
           keras.
-          <br>
+          <br><br>
           Berdasarkan budaya Manggarai dan Flores, meriam bambu ini akan di bunyikan saat ada orang meninggal dunia dan
           akan di nyalakan saat masa Adven dan Natal hingga Tahun Baru. Kenapa Natal selalu dibunyikan, karena untuk
           mengungkapkan kegembiraan atas kelahiran Yesus Kristus.
@@ -254,7 +254,7 @@
     Itulah 10 Destinasi di Indonesia Untuk Merayakan Natal kamu Tahun 2018 guys. Yuk buruan ajak keluarga, teman,
     ataupun orang tersayang untuk menyambut kelahiran Yesus Kristus dengan berkunjung ke tempat-tempat yang asik dan
     pastinya meriah untuk merayakan Natal kamu.
-    <br>
+    <br><br>
     Sumber:
     <a href="https://www.gotravelly.com/blog/destinasi-wisata-indonesia-rayakan-liburan-natal/""
     target=" _blank">www.gotravelly.com</a>
